registry/base/namespace.yaml
apiVersion: 'v1'
kind: 'Namespace'
metadata:
  name: 'registry'
  labels:
    istio-injection: 'enabled'
