registry/base/statefulset.yaml
apiVersion: 'apps/v1'
kind: 'StatefulSet'
metadata:
  name: 'registry'
spec:
  selector:
    matchLabels:
      component: 'registry-server'
      version: 'v2'
  serviceName: 'registry-internal'
  replicas: 1
  template:
    metadata:
      labels:
        component: 'registry-server'
        version: 'v2'
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: 'registry'
          image: 'registry:2'
          ports:
            - name: 'registry'
              containerPort: 5000
          volumeMounts:
            - name: 'data'
              mountPath: '/var/lib/registry'
  volumeClaimTemplates:
    - metadata:
        name: 'data'
      spec:
        accessModes:
          - 'ReadWriteOnce'
        resources:
          requests:
            storage: '32Gi'
