registry/base/headlessservice.yaml
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'registry-internal'
spec:
  selector:
    component: 'registry-server'
  ports:
    - port: 5000
  clusterIP: 'None'
