registry/base/service.yaml
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'registry'
spec:
  selector:
    app: 'registry'
  ports:
    - port: 5000
