registry/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`docker.pkg.dev.localhost`)
      services:
        - kind: Service
          scheme: http
          name: registry
          port: 5000
