registry/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
spec:
  gateways:
    - istio-system/istio-gateway
  hosts:
    - docker.pkg.dev.localhost
  http:
    - route:
        - destination:
            host: registry
            port:
              number: 5000
